--- a/css/style.css
+++ b/css/style.css
@@ -33,14 +33,18 @@ CSS TABLE OF CONTENTS
 
 /* GLOBAL RESETS */
 body { margin: 0; }
-* { box-sizing: border-box; }
+
 
 /* TYPOGRAPHY */
 
 body {
     font-family: Helvetica, Arial, sans-serif;
-    font-size: 100%; /* This sets the value of 1em */ 
+    font-size: 84%; /* This sets the value of 1em */ 
     line-height: 1.4;
+    padding: 1em;
+    max-width: 1000px;
+    line-height: 1.5em;
+    margin: 0 auto;
 }
 
 /* HEADINGS */
@@ -202,7 +206,6 @@ body {
 
 @media (min-width: 768px) {
     .row {
-        display: flex;
         margin-left: -1%;
         margin-left: -1%;
     }
@@ -264,6 +267,12 @@ body {
     color: rgba(0,0,0,1);
 }
 
+.site-footer {
+  text-align: center;
+  padding: 3em 0 2em 0;
+  text-transform: uppercase;
+  letter-spacing: 0.15em;
+}
 
 /* SVG Script Hero Section */
 svg{
@@ -307,11 +316,11 @@ svg{
     font-weight: 300;
 }
 
-/* .site-id a {
-    display: inline-block;
+.site-id a {
+    /* display: inline-block; */
     padding: .25em 0;
     font-weight: 700;
-} */
+}
 
 .site-id svg {
     margin-right: 0.5em;
@@ -320,6 +329,12 @@ svg{
     align-items: none;
     
   }
+
+.site-nav li {
+  margin: 0 .5em;
+  padding: 0;
+  display: inline-block;
+}
 
 
 /* SITE NAV (Primary Top Nav) */
@@ -338,7 +353,7 @@ svg{
     display: grid;
     justify-content: center;
     align-content: center;
-    font-size: 4vw;
+    font-size: 2vw;
     transition: all 0.4s cubic-bezier(0.5, 0, 0.5, 1);
     opacity: 1;
     height: 100%;
@@ -511,7 +526,7 @@ section.hero {
 }
 .hero h2 {
     color: black;
-    font-size: 2.25em;
+    font-size: 2em;
     line-height: 1.1;
 }
 
@@ -750,12 +765,12 @@ fade-in {
 --------------------------------- */
 
 body {
-  font-family: "mr-eaves-xl-modern", Helvetica, Arial, sans-serif;
+  font-family: adobe-jenson-pro, serif, Helvetica, Arial, sans-serif;
   background: white;
 }
 
 .site-navigation {
-  font-family: "mr-eaves-xl-modern", Helvetica, Arial, sans-serif;
+  font-family: adobe-jenson-pro, serif, Helvetica, Arial, sans-serif;
 }
 
 /* Custom Sections */
