--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ CSS TABLE OF CONTENTS
 --------------------- */
 
 /* GLOBAL RESETS */
-body { margin: 0; }
+/* body { margin: 0; } */
 
 
 /* TYPOGRAPHY */
@@ -60,11 +60,13 @@ h1 {
 h2 {
     font-size: 2.25em; /* 36px based on a 16px em */
     line-height: 1.1;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 h3 {
     font-size: 1.5em; /* 24px based on a 16px em */
     line-height: 1.2;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 h4 {
@@ -83,6 +85,7 @@ h6 {
 /* PARAGRAPHS */
 p {
     max-width: 35em;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 /* TYPE SPECIMEN */
@@ -508,7 +511,7 @@ section {
 
 section.hero {
     background-color:white;
-    padding: 15em 0;
+    /* padding: 15em 0; */
     display: block;
     overflow: hidden;
 }
